--- a/MediaBrowser.Dlna/MediaBrowser.Dlna.csproj
+++ b/MediaBrowser.Dlna/MediaBrowser.Dlna.csproj
@@ -64,6 +64,10 @@
     <Compile Include="Eventing\EventManager.cs" />
     <Compile Include="Eventing\EventSubscription.cs" />
     <Compile Include="Main\DlnaEntryPoint.cs" />
+    <Compile Include="MediaReceiverRegistrar\ControlHandler.cs" />
+    <Compile Include="MediaReceiverRegistrar\MediaReceiverRegistrar.cs" />
+    <Compile Include="MediaReceiverRegistrar\MediaReceiverRegistrarXmlBuilder.cs" />
+    <Compile Include="MediaReceiverRegistrar\ServiceActionListBuilder.cs" />
     <Compile Include="PlayTo\CurrentIdEventArgs.cs" />
     <Compile Include="PlayTo\Device.cs">
       <SubType>Code</SubType>
