--- a/MediaBrowser.Model.Portable/MediaBrowser.Model.Portable.csproj
+++ b/MediaBrowser.Model.Portable/MediaBrowser.Model.Portable.csproj
@@ -1043,6 +1043,9 @@
     <Compile Include="..\MediaBrowser.Model\Session\UserDataChangeInfo.cs">
       <Link>Session\UserDataChangeInfo.cs</Link>
     </Compile>
+    <Compile Include="..\MediaBrowser.Model\Sync\CompleteSyncJobInfo.cs">
+      <Link>Sync\CompleteSyncJobInfo.cs</Link>
+    </Compile>
     <Compile Include="..\MediaBrowser.Model\Sync\DeviceFileInfo.cs">
       <Link>Sync\DeviceFileInfo.cs</Link>
     </Compile>
