--- a/MediaBrowser.Server.Implementations/MediaBrowser.Server.Implementations.csproj
+++ b/MediaBrowser.Server.Implementations/MediaBrowser.Server.Implementations.csproj
@@ -420,6 +420,8 @@
     <EmbeddedResource Include="Localization\JavaScript\uk.json" />
     <EmbeddedResource Include="Localization\Server\bg_BG.json" />
     <EmbeddedResource Include="Localization\Server\uk.json" />
+    <None Include="Localization\JavaScript\sl_SI.json" />
+    <EmbeddedResource Include="Localization\Server\sl_SI.json" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
