update javascript connection manager to latest feature set

--- a/MediaBrowser.Model.Portable/MediaBrowser.Model.Portable.csproj
+++ b/MediaBrowser.Model.Portable/MediaBrowser.Model.Portable.csproj
@@ -110,6 +110,9 @@
     <Compile Include="..\MediaBrowser.Model\ApiClient\IServerEvents.cs">
       <Link>ApiClient\IServerEvents.cs</Link>
     </Compile>
+    <Compile Include="..\MediaBrowser.Model\ApiClient\NetworkStatus.cs">
+      <Link>ApiClient\NetworkStatus.cs</Link>
+    </Compile>
     <Compile Include="..\MediaBrowser.Model\ApiClient\RemoteLogoutReason.cs">
       <Link>ApiClient\RemoteLogoutReason.cs</Link>
     </Compile>
