--- a/MediaBrowser.Model.net35/MediaBrowser.Model.net35.csproj
+++ b/MediaBrowser.Model.net35/MediaBrowser.Model.net35.csproj
@@ -1026,6 +1026,12 @@
     <Compile Include="..\MediaBrowser.Model\Sync\LocalItem.cs">
       <Link>Sync\LocalItem.cs</Link>
     </Compile>
+    <Compile Include="..\MediaBrowser.Model\Sync\LocalItemInfo.cs">
+      <Link>Sync\LocalItemInfo.cs</Link>
+    </Compile>
+    <Compile Include="..\MediaBrowser.Model\Sync\LocalItemQuery.cs">
+      <Link>Sync\LocalItemQuery.cs</Link>
+    </Compile>
     <Compile Include="..\MediaBrowser.Model\Sync\SyncCategory.cs">
       <Link>Sync\SyncCategory.cs</Link>
     </Compile>
